--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,5 +1,5 @@
 h1, h2 {
-  font-family: 'thesecret';
+  font-family: 'TheSecret';
 }
 
 h2 {
@@ -8,10 +8,6 @@ h2 {
 
 h5 {
   color: $secondary-color;
-}
-
-body {
-  font-size: 14px;
 }
 
 .hero-header {
