--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'thesecret';
+  font-family: 'TheSecret';
+  src: font-url('TheSecret-regular-webfont.eot'),
+  font-url('TheSecret-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  font-url('TheSecret-regular-webfont.woff') format('woff'),
+  font-url('TheSecret-regular-webfont.ttf') format('truetype'),
+  font-url('TheSecret-regular-webfont.svg#TheSecret_regular') format('svg');
   font-style: normal;
   font-weight: normal;
-  src: font-url('thesecret-regular-webfont.eot'),
-  font-url('thesecret-regular-webfont.eot?#iefix') format('embedded-opentype'),
-  font-url('thesecret-regular-webfont.woff') format('woff'),
-  font-url('thesecret-regular-webfont.ttf') format('truetype'),
-  font-url('thesecret-regular-webfont.svg#thesecret_regular') format('svg');
 }
