--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -63,3 +63,4 @@
 @import 'components/cruise-information';
 @import 'components/wedding-information';
 @import 'components/itinerary';
+@import 'components/reservation-instructions';
