--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -9,7 +9,7 @@
   <title>Sail Away with the Cheas</title>
   <link rel="stylesheet" href="{{root}}assets/css/app.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre|Petit+Formal+Script|Pinyon+Script|Source+Sans+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre|Source+Sans+Pro|Enriqueta" rel="stylesheet">
 </head>
 <body>
   <div class="off-canvas-wrapper">
