--- a/src/partials/wedding-information.html
+++ b/src/partials/wedding-information.html
@@ -15,5 +15,5 @@
       <h5>3:30 PM</h5>
     </div>
   </div>
-  <p><em>More information regarding the Wedding Ceremony and its associated events will be posted closer to the cruise. </em></p>
+  <p class="lead">More information regarding the Wedding Ceremony and its associated events will be posted closer to the cruise.</p>
 </div>
