--- a/src/assets/scss/components/_reservation-instructions.scss
+++ b/src/assets/scss/components/_reservation-instructions.scss
@@ -15,3 +15,26 @@
     margin-left: 0;
   }
 }
+
+.useful-info {
+  .section-header {
+    img, h4 {
+      display: inline-block;
+    }
+
+    img {
+      margin: -.3rem .5rem 0 0;
+    }
+  }
+}
+
+.useful-info-item-container {
+  margin-top: 2rem;
+
+  .useful-info-item {
+    padding: 1.5rem;
+    background-color: $primary-color;
+    color: $white;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+  }
+}
