--- a/src/partials/navbar-mobile.html
+++ b/src/partials/navbar-mobile.html
@@ -1,1 +1,1 @@
-<button type="button" class="button show-for-small-only" data-toggle="offCanvas">Open Menu</button>
+<button type="button" class="button show-for-small-only navbar-mobile" data-toggle="offCanvas">Open Menu</button>
