--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -72,7 +72,7 @@ hr {
     margin-top: 0;
 
     &.hr-white {
-      background: url('../img/break-image-white.svg') no-repeat center;
+      background: url('../img/break-image-white.png') no-repeat center;
       opacity: .7;
     }
 
