--- a/src/partials/itinerary.html
+++ b/src/partials/itinerary.html
@@ -16,45 +16,48 @@
 
   <div class="itinerary-item flex-container">
     <div class="left">
-      <h5>Day 1</h5>
-      <p>March 22</p>
+      <h5>Day 2</h5>
+      <p>March 23</p>
     </div>
     <div class="right">
-      <h5>Los Angeles</h5>
-      <p>4PM - Departure</p>
+      <h5>Santa Barbara</h5>
+      <p>7AM - Arrive</p>
+      <p>6PM - Depart</p>
     </div>
   </div>
 
   <div class="itinerary-item flex-container">
     <div class="left">
-      <h5>Day 1</h5>
-      <p>March 22</p>
+      <h5>Day 3</h5>
+      <p>March 24</p>
     </div>
     <div class="right">
-      <h5>Los Angeles</h5>
-      <p>4PM - Departure</p>
+      <h5>At Sea — Wedding Ceremony</h5>
+      <p>8AM - Arrive</p>
+      <p>5PM - Depart</p>
     </div>
   </div>
 
   <div class="itinerary-item flex-container">
     <div class="left">
-      <h5>Day 1</h5>
-      <p>March 22</p>
+      <h5>Day 4</h5>
+      <p>March 25</p>
     </div>
     <div class="right">
-      <h5>Los Angeles</h5>
-      <p>4PM - Departure</p>
+      <h5>Ensenada, MX</h5>
+      <p>8AM - Arrive</p>
+      <p>5PM - Depart</p>
     </div>
   </div>
 
   <div class="itinerary-item flex-container">
     <div class="left">
-      <h5>Day 1</h5>
-      <p>March 22</p>
+      <h5>Day 5</h5>
+      <p>March 26</p>
     </div>
     <div class="right">
       <h5>Los Angeles</h5>
-      <p>4PM - Departure</p>
+      <p>6:15AM - Arrive</p>
     </div>
   </div>
 </div>
