--- a/src/assets/scss/components/_reservation-instructions.scss
+++ b/src/assets/scss/components/_reservation-instructions.scss
@@ -1,3 +1,7 @@
+.instructions.section-container {
+  padding-bottom: 0;
+}
+
 .instruction-block {
   display: flex;
   margin: 2rem 0;
@@ -36,7 +40,7 @@
     background-color: $primary-color;
     color: $white;
     box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
-    
+
     @include breakpoint(small only) {
       margin: .5rem 0;
     }
