--- a/src/partials/wedding-information.html
+++ b/src/partials/wedding-information.html
@@ -1,4 +1,4 @@
-<div class="wedding-information" style="background-color: #ededed;" data-equalizer-watch>
+<div class="wedding-information" data-equalizer-watch>
   <div class="section-header blue">
     <h2>Wedding Information</h2>
     <hr class="hr-blue">
