--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -64,7 +64,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Source Sans Pro', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Poppins', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
