--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -12,7 +12,7 @@ h5 {
 }
 
 body {
-  font-weight: light;
+
 }
 
 .hero-header {
@@ -82,9 +82,9 @@ hr {
 }
 
 .lead {
-  font-family: 'source sans pro', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: $dark-gray;
-  font-weight: bold;
+  font-weight: 300;
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 1px;
