--- a/src/assets/scss/components/_wedding-information.scss
+++ b/src/assets/scss/components/_wedding-information.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-left: 1px dashed $light-gray;
 }
 
 .wedding-information-item {
