--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -97,7 +97,7 @@ a {
   transition: .5s all;
 
   &:hover {
-    color: $tertiary-color;
-    border-color: $tertiary-color;
+    color: $secondary-color;
+    border-color: $secondary-color;
   }
 }
