--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -59,8 +59,11 @@
 @import 'components/navbar';
 @import 'components/timeline';
 @import 'components/slider';
+@import 'components/buttons';
 @import 'components/wedding-party';
 @import 'components/cruise-information';
 @import 'components/wedding-information';
 @import 'components/itinerary';
 @import 'components/reservation-instructions';
+@import 'components/contact';
+@import 'components/rsvp';
