--- a/src/assets/scss/components/_itinerary.scss
+++ b/src/assets/scss/components/_itinerary.scss
@@ -1,5 +1,5 @@
 .itinerary {
-  background: $primary-color url('../img/vines-bg.png') no-repeat top center;
+  background: url('../img/vines-bg.png') no-repeat top center;
   background-size: cover;
   // background-color: rgba($secondary-color, .2);
 }
