--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -244,7 +244,7 @@ $breadcrumbs-item-slash: true;
 // 11. Button
 // ----------
 
-$button-padding: 0.85em 1em;
+$button-padding: .85rem 2rem;
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
 $button-background: $primary-color;
