--- a/src/assets/scss/components/_itinerary.scss
+++ b/src/assets/scss/components/_itinerary.scss
@@ -1,7 +1,6 @@
 .itinerary {
-  background: url('../img/vines-bg.png') no-repeat top center;
-  background-size: cover;
-  // background-color: rgba($secondary-color, .2);
+  border-top: 1px solid $light-gray;
+  background-color: rgba(0,0,0,.05);
 }
 
 .itinerary-item {
