--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -11,7 +11,7 @@
         <li>
           <a href="#">Cruise Information</a>
           <ul class="menu vertical">
-            <li><a href="#">Need to Know</a></li>
+            <li><a href="#need-to-know">Need to Know</a></li>
             <li><a href="#">Itinerary</a></li>
             <li><a href="#">Wedding Info</a></li>
             <li><a href="#">Reservation Instructions</a></li>
