--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -349,8 +349,8 @@ $dropdownmenu-arrows: true;
 $dropdownmenu-arrow-color: $white;
 $dropdownmenu-arrow-size: 4px;
 $dropdownmenu-min-width: 200px;
-$dropdownmenu-background: $white;
-$dropdownmenu-border: 1px solid $medium-gray;
+$dropdownmenu-background: rgba(255,255,255,.2);
+$dropdownmenu-border: 0;
 
 // 19. Forms
 // ---------
