--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -92,7 +92,7 @@ hr {
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 1px;
-  padding: 2rem 2rem 0 2rem;
+  padding: 2rem 2rem 2.5rem 2rem;
 }
 
 a {
