--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -57,6 +57,7 @@
 
 // components
 @import 'components/navbar';
+@import 'components/offcanvas';
 @import 'components/timeline';
 @import 'components/slider';
 @import 'components/buttons';
