--- a/src/partials/navbar-mobile.html
+++ b/src/partials/navbar-mobile.html
@@ -1,1 +1,4 @@
-<button type="button" class="button show-for-small-only navbar-mobile" data-toggle="offCanvas">Open Menu</button>
+<div class="navbar-mobile show-for-small-only">
+  <button type="button" class="hamburger-icon" data-toggle="offCanvas"></button>
+  <span>Menu</span>
+</div>
