--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -59,7 +59,7 @@ $foundation-palette: (
 $tertiary-color: #C5E5D9;
 $light-gray: #E4E4E4;
 $medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
+$dark-gray: #3d3d3d;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
