--- a/src/partials/instructions.html
+++ b/src/partials/instructions.html
@@ -1,4 +1,4 @@
-<div class="instructions section-container border-bottom">
+<div id="instructions" class="instructions section-container border-bottom">
   <div class="section-header blue">
     <h2>Reservation Instructions</h2>
     <hr class="hr-blue">
