--- a/src/partials/itinerary.html
+++ b/src/partials/itinerary.html
@@ -1,4 +1,4 @@
-<div class="itinerary" data-equalizer-watch>
+<div id="itinerary" class="itinerary" data-equalizer-watch>
   <div class="section-header blue">
     <h2>Cruise Itinerary</h2>
     <hr class="hr-blue">
