--- a/src/partials/navbar-mobile.html
+++ b/src/partials/navbar-mobile.html
@@ -1,4 +1,4 @@
-<div class="navbar-mobile show-for-small-only">
-  <button type="button" class="hamburger-icon" data-toggle="offCanvas"></button>
-  <span>Menu</span>
+<div class="navbar-mobile show-for-small-only" data-toggle="offCanvas">
+  <button type="button" class="hamburger-icon"></button>
+  <a href="#">Menu</a>
 </div>
