--- a/src/partials/offcanvas.html
+++ b/src/partials/offcanvas.html
@@ -6,12 +6,12 @@
   </button>
 
   <!-- Menu -->
-  <ul class="vertical menu">
-    <li><a href="#">Foundation</a></li>
-    <li><a href="#">Dot</a></li>
-    <li><a href="#">ZURB</a></li>
-    <li><a href="#">Com</a></li>
-    <li><a href="#">Slash</a></li>
-    <li><a href="#">Sites</a></li>
+  <ul class="vertical menu off-canvas-menu">
+    <li><a href="#timeline">Henry & Caroline</a></li>
+    <li><a href="#wedding-party">Wedding Party</a></li>
+    <li><a href="#need-to-know">Cruise Information</a></li>
+    <li><a href="#instructions">Reservation Instructions</a></li>
+    <li><a href="#rsvp">RSVP</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </div>
