--- a/src/partials/wedding-party-section.html
+++ b/src/partials/wedding-party-section.html
@@ -1,4 +1,4 @@
-<div class="wedding-party section-container">
+<div id="wedding-party" class="wedding-party section-container">
   <div class="section-header white">
     <h2>The Wedding Party</h2>
     <hr class="hr-white">
