--- a/src/assets/scss/components/_offcanvas.scss
+++ b/src/assets/scss/components/_offcanvas.scss
@@ -1,15 +1,47 @@
 // Mobile Nav Bar
 .navbar-mobile {
   margin: 0 1rem;
-  font-family: 'Poppins', sans-serif;
   display: flex;
   align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 6px rgba(0,0,0,.5);
 
   .hamburger-icon {
-    @include hamburger($white, $primary-color, 20px, 16px, 2px, 3);
+    @include hamburger($white, $white, 20px, 16px, 2px, 3);
+
+    &::after {
+      transition: .5s all;
+    }
   }
 
-  span {
+  a {
     margin-left: 1rem;
+    color: white;
+    font-weight: normal;
+    border: 0;
+  }
+}
+
+// Off canvas
+.off-canvas {
+  background-color: $dark-gray;
+
+  li {
+    padding: .4rem 0;
+
+    &:hover {
+      background-color: darken($dark-gray, 1);
+    }
+  }
+
+  a {
+    border: 0;
+    color: $light-gray;
+  }
+}
+
+.close-button {
+  span {
+    color: $white;
   }
 }
