--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -3,25 +3,25 @@
     <div class="column">
       <ul class="dropdown menu navbar flex-container align-spaced" data-dropdown-menu>
         <li>
-          <a href="#">Henry & Caroline</a>
+          <a href="#timeline">Henry & Caroline</a>
         </li>
         <li>
-          <a href="#">Wedding Party</a>
+          <a href="#wedding-party">Wedding Party</a>
         </li>
         <li>
           <a href="#">Cruise Information</a>
           <ul class="menu vertical">
             <li><a href="#need-to-know">Need to Know</a></li>
-            <li><a href="#">Itinerary</a></li>
-            <li><a href="#">Wedding Info</a></li>
-            <li><a href="#">Reservation Instructions</a></li>
+            <li><a href="#itinerary">Itinerary</a></li>
+            <li><a href="#wedding-info">Wedding Info</a></li>
+            <li><a href="#instructions">Reservation Instructions</a></li>
           </ul>
         </li>
         <li>
-          <a href="#">RSVP</a>
+          <a href="#rsvp">RSVP</a>
         </li>
         <li>
-          <a href="#">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
       </ul>
     </div>
