--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -451,10 +451,10 @@ $maincontent-class: 'off-canvas-content';
 // 25. Orbit
 // ---------
 
-$orbit-bullet-background: $medium-gray;
-$orbit-bullet-background-active: $dark-gray;
-$orbit-bullet-diameter: 1.2rem;
-$orbit-bullet-margin: 0.1rem;
+$orbit-bullet-background: $white;
+$orbit-bullet-background-active: $secondary-color;
+$orbit-bullet-diameter: .5rem;
+$orbit-bullet-margin: 0.2rem;
 $orbit-bullet-margin-top: 0.8rem;
 $orbit-bullet-margin-bottom: 0.8rem;
 $orbit-caption-background: rgba($black, 0.5);
