update groom slider

--- a/src/assets/scss/components/_wedding-party.scss
+++ b/src/assets/scss/components/_wedding-party.scss
@@ -10,9 +10,9 @@
     color: $tertiary-color;
   }
   .decorative-text {
-    font-family: 'TheSecret';
+    font-family: 'Great Vibes';
     font-size: 2rem;
-    margin: 2.5rem 0 0 .5rem;
+    margin: .3rem 0 0 .5rem;
     color: $white;
     line-height: 0;
   }
