--- a/src/partials/wedding-party-section.html
+++ b/src/partials/wedding-party-section.html
@@ -16,15 +16,7 @@
   <div class="row">
     <div class="medium-8 column with-the-groom">
       <h5>With the <span class="decorative-text">Groom</span></h5>
-      <div class="groom-slider">
-        {{#repeat 3}}
-        <div class="slider-item">
-          <img src="https://unsplash.it/100" alt="">
-          <h4 class="slider-name">Lucy Liu</h4>
-          <h4 class="slider-role">Bridesmaid</h4>
-        </div>
-        {{/repeat}}
-      </div>
+      {{> groom-slider}}
     </div>
   </div>
 
