--- a/src/partials/timeline.html
+++ b/src/partials/timeline.html
@@ -3,4 +3,198 @@
 		<h2>Henry & Caroline</h2>
 		<hr class="hr-blue">
 	</div>
+
+	<div class="row align-center">
+		<div class="medium-8 columns">
+			<div class="orbit" role="region" aria-label="Bridesmaids" data-orbit data-auto-play="false">
+				<nav class="orbit-bullets">
+					<button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+					<button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+					<button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+					<button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+					<button data-slide="4"><span class="show-for-sr">Fifth slide details.</span></button>
+					<button data-slide="5"><span class="show-for-sr">Sixth slide details.</span></button>
+					<button data-slide="6"><span class="show-for-sr">Seventh slide details.</span></button>
+					<button data-slide="7"><span class="show-for-sr">Eighth slide details.</span></button>
+				</nav>
+				<ul class="orbit-container timeline-container">
+					<button class="orbit-previous timeline-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+					<button class="orbit-next timeline-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+
+					<!-- slide 1 -->
+					<li class="is-active orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 columns text-center">
+								<h5>August 2010</h5>
+								<p>Met in class at San Jose State</p>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2010.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+
+					<!-- slide 2 -->
+					<li class="orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 columns text-center">
+								<h5>January 2011</h5>
+								<p>Henry asks Caroline to be his girlfriend.</p>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="row timeline-item">
+								<div class="small-12 medium-6 columns timeline-img-container">
+									<img src="{{root}}assets/img/2011-1.jpg" class="timeline-img">
+								</div>
+								<div class="small-12 medium-6 columns timeline-text align-self-middle">
+									<h5>December 2010</h5>
+									<p>Our first date at a Winter Formal</p>
+								</div>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2011-3.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+
+					<!-- slide 3 -->
+					<li class="orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2012-1.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2012-2.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+
+					<!-- slide 4 -->
+					<li class="orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2013-1.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2013-2.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+
+					<!-- slide 5 -->
+					<li class="orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2014-1.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2014-2.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+
+					<!-- slide 6 -->
+					<li class="orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2015-1.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2015-2.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+
+					<!-- slide 7 -->
+					<li class="orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2016-1.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2016-2.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+
+					<!-- slide 8 -->
+					<li class="orbit-slide timeline-slide">
+						<div class="row timeline-item">
+							<div class="small-12 medium-6 columns timeline-img-container">
+								<img src="{{root}}assets/img/2017.jpg" class="timeline-img">
+							</div>
+							<div class="small-12 medium-6 columns timeline-text align-self-middle">
+								<h5>December 2010</h5>
+								<p>Our first date at a Winter Formal</p>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
 </div>
