--- a/src/partials/wedding-information.html
+++ b/src/partials/wedding-information.html
@@ -12,7 +12,7 @@
     <div class="wedding-information-item">
       <img src="{{root}}assets/img/ring-icon.png" alt="ring icon" width="90">
       <p>The ceremony will begin at</p>
-      <h5>3:30 PM</h5>
+      <h5>3:30 PM @ Skywalker's Nightclub</h5>
     </div>
   </div>
   <p class="lead">More information regarding the Wedding Ceremony and its associated events will be posted closer to the cruise.</p>
