--- a/src/assets/scss/components/_wedding-party.scss
+++ b/src/assets/scss/components/_wedding-party.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.orbit-container {
+  height: auto !important;
+}
+
 .bride-slider, .groom-slider {
   display: flex;
   justify-content: space-between;
@@ -25,12 +29,14 @@
 
 .orbit {
   width: 100%;
-  margin-top: 1rem;
 }
 
 .slider-item {
   img {
-    border-radius: 5rem;
+    padding: 5px;
+    background-color: rgba($white, .2);
+    width: 100px;
+    border-radius: 50rem;
     margin-bottom: .5rem;
   }
 }
