--- a/src/partials/groom-slider.html
+++ b/src/partials/groom-slider.html
@@ -3,60 +3,60 @@
     <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
     <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
     <li class="is-active orbit-slide">
-      <div class="row medium-up-3">
+      <div class="row medium-up-3 align-justify">
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-1.jpg" alt="">
+            <img src="https://unsplash.it/100" alt="">
             <h4 class="slider-name">Lucy Liu</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-2.jpg" alt="">
+            <img src="https://unsplash.it/100" alt="">
             <h4 class="slider-name">Lucy Liu</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-3.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="orbit-slide">
-      <div class="row medium-up-3">
-        <div class="column">
-          <div class="slider-item">
-            <img src="{{root}}assets/img/party-4.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-        <div class="column">
-          <div class="slider-item">
-            <img src="{{root}}assets/img/party-5.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-        <div class="column">
-          <div class="slider-item">
-            <img src="{{root}}assets/img/party-6.jpg" alt="">
+            <img src="https://unsplash.it/100" alt="">
             <h4 class="slider-name">Lucy Liu</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
       </div>
     </li>
-    <li class="orbit-slide">
-      <div class="row medium-up-3">
+    <li class="is-active orbit-slide">
+      <div class="row medium-up-3 align-justify">
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-7.jpg" alt="">
+            <img src="https://unsplash.it/100" alt="">
+            <h4 class="slider-name">Lucy Liu</h4>
+            <h4 class="slider-role">Bridesmaid</h4>
+          </div>
+        </div>
+        <div class="column">
+          <div class="slider-item">
+            <img src="https://unsplash.it/100" alt="">
+            <h4 class="slider-name">Lucy Liu</h4>
+            <h4 class="slider-role">Bridesmaid</h4>
+          </div>
+        </div>
+        <div class="column">
+          <div class="slider-item">
+            <img src="https://unsplash.it/100" alt="">
+            <h4 class="slider-name">Lucy Liu</h4>
+            <h4 class="slider-role">Bridesmaid</h4>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="is-active orbit-slide">
+      <div class="row medium-up-3 align-justify">
+        <div class="column">
+          <div class="slider-item">
+            <img src="https://unsplash.it/100" alt="">
             <h4 class="slider-name">Lucy Liu</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
