style password protect

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -67,3 +67,4 @@
 @import 'components/reservation-instructions';
 @import 'components/contact';
 @import 'components/rsvp';
+@import 'components/password-form';
