--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -53,3 +53,13 @@
     margin-top: 0;
   }
 }
+
+.full-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url('https://source.unsplash.com/7bVMdNYzH_8/1600x900');
+  background-position: center center;
+  background-size: cover;
+}
