--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -1,30 +1,31 @@
-<div class="navbar-container">
-  <div class="row hide-for-small-only">
-    <div class="column">
-      <ul class="dropdown menu navbar flex-container align-spaced" data-dropdown-menu>
-        <li>
-          <a href="#timeline">Henry & Caroline</a>
-        </li>
-        <li>
-          <a href="#wedding-party">Wedding Party</a>
-        </li>
-        <li>
-          <a href="#">Cruise Information</a>
-          <ul class="menu vertical">
-            <li><a href="#need-to-know">Need to Know</a></li>
-            <li><a href="#itinerary">Itinerary</a></li>
-            <li><a href="#wedding-info">Wedding Info</a></li>
-            <li><a href="#instructions">Reservation Instructions</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#rsvp">RSVP</a>
-        </li>
-        <li>
-          <a href="#contact">Contact</a>
-        </li>
-      </ul>
+<div data-sticky-container>
+  <div class="navbar-container" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1">
+    <div class="row hide-for-small-only">
+      <div class="column">
+        <ul class="dropdown menu navbar flex-container align-spaced" data-dropdown-menu>
+          <li>
+            <a href="#timeline">Henry & Caroline</a>
+          </li>
+          <li>
+            <a href="#wedding-party">Wedding Party</a>
+          </li>
+          <li>
+            <a href="#need-to-know">Cruise Information</a>
+            <ul class="menu vertical cruise-info-menu">
+              <li><a href="#need-to-know">Need to Know</a></li>
+              <li><a href="#itinerary">Itinerary</a></li>
+              <li><a href="#wedding-info">Wedding Info</a></li>
+              <li><a href="#instructions">Reservation Instructions</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#rsvp">RSVP</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-
 </div>
