--- a/src/assets/scss/components/_wedding-party.scss
+++ b/src/assets/scss/components/_wedding-party.scss
@@ -35,7 +35,7 @@
   img {
     padding: 5px;
     background-color: rgba($white, .2);
-    width: 100px;
+    width: 150px !important;
     border-radius: 50rem;
     margin-bottom: .5rem;
   }
