--- a/src/partials/bride-slider.html
+++ b/src/partials/bride-slider.html
@@ -1,4 +1,4 @@
-<div class="orbit" role="region" aria-label="Bridesmaids" data-orbit data-auto-play="false">
+<div class="orbit show-for-medium" role="region" aria-label="Bridesmaids" data-orbit data-auto-play="false">
   <ul class="orbit-container wedding-party-slider">
     <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
     <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
@@ -6,22 +6,22 @@
       <div class="row medium-up-3">
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-1.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
+            <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+            <h4 class="slider-name">Sharoleen Amigable</h4>
+            <h4 class="slider-role">Maid of Honor</h4>
+          </div>
+        </div>
+        <div class="column">
+          <div class="slider-item">
+            <img src="{{root}}assets/img/party-bianca.jpg" alt="">
+            <h4 class="slider-name">Bianca Cabrera</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-2.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-        <div class="column">
-          <div class="slider-item">
-            <img src="{{root}}assets/img/party-3.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
+            <img src="{{root}}assets/img/party-kristine.jpg" alt="">
+            <h4 class="slider-name">Kristine Kiwata</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
@@ -32,47 +32,40 @@
         <div class="column">
           <div class="slider-item">
             <img src="{{root}}assets/img/party-4.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
+            <h4 class="slider-name">Alison Wuerstle</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
             <img src="{{root}}assets/img/party-5.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
+            <h4 class="slider-name">Nea Ignacio</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
             <img src="{{root}}assets/img/party-6.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
+            <h4 class="slider-name">Amanda Santos</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
       </div>
     </li>
     <li class="orbit-slide">
-      <div class="row medium-up-3">
+      <div class="row medium-up-3 align-center">
         <div class="column">
           <div class="slider-item">
             <img src="{{root}}assets/img/party-7.jpg" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
+            <h4 class="slider-name">Randolph Cabrera</h4>
+            <h4 class="slider-role">Bridesman</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
             <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-        <div class="column">
-          <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
+            <h4 class="slider-name">John Sy</h4>
+            <h4 class="slider-role">Bridesman</h4>
           </div>
         </div>
       </div>
@@ -82,6 +75,78 @@
     <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
     <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
     <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+  </nav>
+</div>
+
+<div class="orbit hide-for-medium" role="region" aria-label="Bridesmaids" data-orbit data-auto-play="false">
+  <ul class="orbit-container wedding-party-slider">
+    <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+    <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+    <li class="is-active orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+        <h4 class="slider-name">Sharoleen Amigable</h4>
+        <h4 class="slider-role">Maid of Honor</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-bianca.jpg" alt="">
+        <h4 class="slider-name">Bianca Cabrera</h4>
+        <h4 class="slider-role">Bridesmaid</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-kristine.jpg" alt="">
+        <h4 class="slider-name">Kristine Kiwata</h4>
+        <h4 class="slider-role">Bridesmaid</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-4.jpg" alt="">
+        <h4 class="slider-name">Alison Wuerstle</h4>
+        <h4 class="slider-role">Bridesmaid</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-5.jpg" alt="">
+        <h4 class="slider-name">Nea Ignacio</h4>
+        <h4 class="slider-role">Bridesmaid</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-6.jpg" alt="">
+        <h4 class="slider-name">Amanda Santos</h4>
+        <h4 class="slider-role">Bridesmaid</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-7.jpg" alt="">
+        <h4 class="slider-name">Randolph Cabrera</h4>
+        <h4 class="slider-role">Bridesman</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-6.jpg" alt="">
+        <h4 class="slider-name">John Sy</h4>
+        <h4 class="slider-role">Bridesman</h4>
+      </div>
+    </li>
+  </ul>
+  <nav class="orbit-bullets">
+    <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+    <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+    <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
     <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+    <button data-slide="4"><span class="show-for-sr">Fifth slide details.</span></button>
+    <button data-slide="5"><span class="show-for-sr">Sixth slide details.</span></button>
+    <button data-slide="6"><span class="show-for-sr">Seventh slide details.</span></button>
+    <button data-slide="7"><span class="show-for-sr">Eighth slide details.</span></button>
   </nav>
 </div>
