--- a/src/partials/groom-slider.html
+++ b/src/partials/groom-slider.html
@@ -1,4 +1,4 @@
-<div class="orbit" role="region" aria-label="Bridesmaids" data-orbit data-auto-play="false">
+<div class="orbit show-for-medium" role="region" aria-label="Bridesmaids" data-orbit data-auto-play="false">
   <ul class="orbit-container wedding-party-slider">
     <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
     <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
@@ -6,73 +6,41 @@
       <div class="row medium-up-3 align-justify">
         <div class="column">
           <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
+            <img src="{{root}}assets/img/party-joe.jpg" alt="">
+            <h4 class="slider-name">Joseph Muerto</h4>
+            <h4 class="slider-role">Best Man</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
+            <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+            <h4 class="slider-name">Neiman Chen</h4>
+            <h4 class="slider-role">Groomsman</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="is-active orbit-slide">
-      <div class="row medium-up-3 align-justify">
-        <div class="column">
-          <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-        <div class="column">
-          <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-        <div class="column">
-          <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
+            <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+            <h4 class="slider-name">Wesley Yabut</h4>
+            <h4 class="slider-role">Groomsman</h4>
           </div>
         </div>
       </div>
     </li>
-    <li class="is-active orbit-slide">
-      <div class="row medium-up-3 align-justify">
+    <li class="orbit-slide">
+      <div class="row medium-up-3 align-center">
         <div class="column">
           <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
+            <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+            <h4 class="slider-name">Lina Chea</h4>
+            <h4 class="slider-role">Groomsmaid</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
-          </div>
-        </div>
-        <div class="column">
-          <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
-            <h4 class="slider-name">Lucy Liu</h4>
-            <h4 class="slider-role">Bridesmaid</h4>
+            <img src="{{root}}assets/img/party-stacey.jpg" alt="">
+            <h4 class="slider-name">Stacey Martin</h4>
+            <h4 class="slider-role">Groomsmaid</h4>
           </div>
         </div>
       </div>
@@ -81,7 +49,54 @@
   <nav class="orbit-bullets">
     <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
     <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+  </nav>
+</div>
+
+<div class="orbit hide-for-medium" role="region" aria-label="Bridesmaids" data-orbit data-auto-play="false">
+  <ul class="orbit-container wedding-party-slider">
+    <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+    <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+    <li class="is-active orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-joe.jpg" alt="">
+        <h4 class="slider-name">Joseph Muerto</h4>
+        <h4 class="slider-role">Best Man</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+        <h4 class="slider-name">Neiman Chen</h4>
+        <h4 class="slider-role">Groomsman</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+        <h4 class="slider-name">Wesley Yabut</h4>
+        <h4 class="slider-role">Groomsman</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+        <h4 class="slider-name">Lina Chea</h4>
+        <h4 class="slider-role">Groomsmaid</h4>
+      </div>
+    </li>
+    <li class="orbit-slide">
+      <div class="slider-item">
+        <img src="{{root}}assets/img/party-stacey.jpg" alt="">
+        <h4 class="slider-name">Stacey Martin</h4>
+        <h4 class="slider-role">Groomsman</h4>
+      </div>
+    </li>
+  </ul>
+  <nav class="orbit-bullets">
+    <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+    <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
     <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
     <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+    <button data-slide="4"><span class="show-for-sr">Fifth slide details.</span></button>
   </nav>
 </div>
