change party anmes

--- a/src/partials/bride-slider.html
+++ b/src/partials/bride-slider.html
@@ -38,14 +38,14 @@
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-5.jpg" alt="">
+            <img src="{{root}}assets/img/party-nea.jpg" alt="">
             <h4 class="slider-name">Nea Ignacio</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-6.jpg" alt="">
+            <img src="{{root}}assets/img/party-amanda.jpg" alt="">
             <h4 class="slider-name">Amanda Santos</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
